kubernetes/flask-deployment.yml
---

apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: flask-deployment 
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: flask 
  template: 
    metadata:
      labels:
        app: flask 
    spec: 
      containers:
        - name: flask 
          image: barrawi/containerized-webapp:latest 
          ports:
            - containerPort: 5000
