kubernetes/redis-deployment.yml
---

apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: redis-deployment 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis 
  template:
    metadata:
      labels:
        app: redis 
    spec: 
      containers:
        - name: redis 
          image: redis:alpine
          ports: 
            - containerPort: 6379
