kubernetes/flask-service.yml
---

apiVersion: v1 
kind: Service 
metadata: 
  name: flask-service 
spec: 
  type: NodePort 
  selector:
    app: flask 
  ports:
    - protocol: TCP 
      port: 5000
      targetPort: 5000 
      nodePort: 30000
