kubernetes/monitoring-ingress.yml
---

apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: grafana-ingress 
  namespace: monitoring 
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec: 
  ingressClassName: nginx
  rules: 
    - host: grafana.local 
      http:
        paths: 
          - path: / 
            pathType: Prefix 
            backend: 
              service: 
                name: monitoring-grafana
                port: 
                  number: 80
